<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collection"
            android:title="@string/navigation_collection" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/navigation_favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/navigation_search" />
    </group>

    <item android:title="Autres">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_export"
                android:title="@string/action_export" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/navigation_settings" />
        </menu>
    </item>

</menu>
