<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.carspotter.ui.fragment.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_collection"
        android:name="com.example.carspotter.ui.fragment.CollectionFragment"
        android:label="@string/navigation_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.carspotter.ui.fragment.FavoritesFragment"
        android:label="@string/navigation_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.carspotter.ui.fragment.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/fragment_search" />

</navigation>
